--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.1",
     "core-js": "^3.8.3",
+    "uspin": "^1.3.0",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
+    "vue-loading-overlay": "^6.0.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
@@ -20,7 +24,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.7.1"
   },
   "eslintConfig": {
     "root": true,
